DevTools: [regression] do not go back and forth via utf8 in the debugger/runtime agents.

BUG=592820
NOTRY=true

Review URL: https://codereview.chromium.org/1767343002

Cr-Commit-Position: refs/heads/master@{#379716}

Former-commit-id: 0599b75469cb6edec440ec4c6ec1f3bc29b383f6